Changes:

2015/04/07: Version 11.0.4 - Sebastien Godard (sysstat <at> orange.fr)
	* Makefile: sysstat init script may sometimes be called rc.sysstat.
          So use that name when needed.
	* pidstat: Don't stop if gtime and cgtime fields are unavailable.
	* Typos fixed in XSD document.
        * [Peter Schiffer]: Replace spaces with tabs in Makefile.in.
        * [Peter Schiffer]: Create appropriate directories in DESTDIR if
          missing.
        * [Peter Schiffer]: Fixed installation of systemd/cron files on
          systems w/o systemd.
        * [Peter Schiffer]: Don't look in weird places for programs during
          configuration.
	* [Peter Schiffer]: Portable way to detect 64 bit OS in configure 
          script.
	* [Steve Kay]: Fix mpstat SCPU alignment output.
	* Makefile: Call chkconfig only if $(COPY_ONLY) is set to no.
	* sysstat(5) manual page updated.
	* NLS updated.

2015/02/13: Version 11.0.3 - Sebastien Godard (sysstat <at> orange.fr)
	* [Vasant Hegde]: sadc: Fix possible race condition in signal
          handler code.
	* Fix description of %util in iostat and sar manual pages.
	* [Peter Schiffer]: Prefer xz compression program when
	  compressing sa data files.
	* Make sure that no crontabs are activated when configure's option
          --enable-copy-only is used.
	* sadc manual page updated.
	* Code cleaned.

2014/10/19: Version 11.0.2 - Sebastien Godard (sysstat <at> orange.fr)
	* [Vasant Hegde]: sadc: Don't send SIGINT signal if parent
	  process is already dead.
	* Fixed incomplete sar and sadf output when end time (specified
	  with option -e) crosses 24 hour boundary.
	* cifsiostat/nfsiostat: Fix output on single core CPU.
	* pidstat didn't handle processes with spaces in their name
	  properly. This is now fixed.

2014/08/30: Version 11.0.1 - Sebastien Godard (sysstat <at> orange.fr)
	* Added option -[0-9]+ to sadf to show data of that days ago.
	* Use statvfs() system call instead of deprecated statfs() to