@@ -524,15 +524,14 @@ void stub_print_memory_stats(struct activity *a, int prev, int curr,
 			       (double) avg_frskb / avg_count,
 			       ((double) avg_tlskb / avg_count) -
 			       ((double) avg_frskb / avg_count),
-			       ((double) (avg_tlskb / avg_count)) ?
-			       SP_VALUE((double) (avg_frskb / avg_count),
-					(double) (avg_tlskb / avg_count),
-					(double) (avg_tlskb / avg_count)) :
+			       avg_tlskb ?
+			       SP_VALUE((double) avg_frskb / avg_count,
+					(double) avg_tlskb / avg_count,
+					(double) avg_tlskb / avg_count) :
 			       0.0,
-			       (double) (avg_caskb / avg_count),
-			       (((double) avg_tlskb / avg_count) -
-				((double) avg_frskb / avg_count)) ?
-			       SP_VALUE(0.0, (double) (avg_caskb / avg_count),
+			       (double) avg_caskb / avg_count,
+			       (avg_tlskb != avg_frskb) ?
+			       SP_VALUE(0.0, (double) avg_caskb / avg_count,
 					((double) avg_tlskb / avg_count) -
 					((double) avg_frskb / avg_count)) :
 			       0.0);
@@ -2210,10 +2209,10 @@ void stub_print_huge_stats(struct activity *a, int curr, int dispavg)
 		       (double) avg_frhkb / avg_count,
 		       ((double) avg_tlhkb / avg_count) -
 		       ((double) avg_frhkb / avg_count),
-		       ((double) (avg_tlhkb / avg_count)) ?
-		       SP_VALUE((double) (avg_frhkb / avg_count),
-				(double) (avg_tlhkb / avg_count),
-				(double) (avg_tlhkb / avg_count)) :
+		       avg_tlhkb ?
+		       SP_VALUE((double) avg_frhkb / avg_count,
+				(double) avg_tlhkb / avg_count,
+				(double) avg_tlhkb / avg_count) :
 		       0.0);
 
 		/* Reset average counters */
